--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">TwitterClient</string>
+    <string name="avatar">Avatar</string>
+    <string name="baron">Baron</string>
+    <string name="iimbaron">\@iimbaron</string>
+    <string name="text">Hello, i\'m developing an application base Twitter https://t.co/jqAUrpC22t</string>
+    <string name="count">9999</string>
+    <string name="retweet">Retweet</string>
+    <string name="comment">Comment</string>
+    <string name="image">Image</string>
 </resources>
